apply plugin: "java"
sourceCompatibility = '16'
targetCompatibility = '16'

[compileJava , compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = [ "src/main" ]
sourceSets.test.java.srcDirs = ["src/test"]

eclipse.project.name = appName + "-core"

test {
    useJUnitPlatform()
}

dependencies {

    // https://mvnrepository.com/artifact/org.jetbrains/annotations
    implementation group: 'org.jetbrains', name: 'annotations', version: '20.1.0'

    // https://mvnrepository.com/artifact/org.json/json
    implementation group: 'org.json', name: 'json', version: '20210307'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'

    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'

    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'

    // https://mvnrepository.com/artifact/com.badlogicgames.box2dlights/box2dlights
    runtimeOnly group: 'com.badlogicgames.box2dlights', name: 'box2dlights', version: '1.3'

    //compile 'org.jetbrains:annotations:20.1.0'
    //compile 'org.json:json:20200518'
    //compile 'org.apache.commons:commons-collections4:4.4'
    //compile 'com.google.guava:guava:29.0-jre'
    //compile 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    //compile "com.badlogicgames.box2dlights:box2dlights:1.5"
    //testCompile 'org.junit.jupiter:junit-jupiter-api:5.7.0'





}

compileJava